///		Changelog		///
@date 04/02/2015
- Added Minimap In Editor
- Added Minimap color to every RogueEntity

@date 03/02/2015
- Added changelog
- Added Id Handler in global class
- Added the possibility to change the Entity to place in the Level Editor
- Added textures