@@ -3,10 +3,12 @@ package com.styxsailors.rogue.utils;
 import java.awt.Rectangle;
 import java.util.ArrayList;
 
+import com.styxsailors.rogue.entity.Player;
 import com.styxsailors.rogue.entity.RogueEntity;
 import com.styxsailors.rogue.entity.environment.UnpassableBlock;
 import com.styxsailors.rogue.handler.EditorHandler;
 import com.styxsailors.rogue.handler.InputHandler;
+import com.styxsailors.rogue.handler.LevelHandler;
 import com.styxsailors.rogue.handler.MouseHandler;
 import com.styxsailors.rogue.handler.TextureHandler;
 import com.styxsailors.rogue.screen.Camera;
@@ -26,17 +28,21 @@ public class Global {
 	public TextureHandler tex = new TextureHandler();
 	public int camX, camY;
 	public Camera camera;
+	public LevelHandler level;
 	public EditorHandler editor;
 	public ArrayList<RogueEntity> ids = new ArrayList<RogueEntity>();
 	public int selectedIndex = 0;
 	public Rectangle visibleScreen;
+	public boolean enableMinimap = true;
 	
 	public Global(){
 		System.out.println("Initializing global variable");
 		initIds();
 	}
+	
 	private void initIds(){
-		ids.add(new RogueEntity(this));
+		ids.add(new Player(this));
 		ids.add(new UnpassableBlock(this));
 	}
+	
 }
